--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	<script src="index.js"></script>
+    <p>Hello World!</p>
+	<!-- <script src="index.js"></script> -->
   </body>
 </html>
