--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Civico 4</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div class="title">
     <p>Hello World!</p>
+   </div>
 	<!-- <script src="index.js"></script> -->
   </body>
 </html>
