--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Civico 4</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+
   </head>
-  <body>
+  <body style="background-color: #7ddbd2;">
     <div class="title">
-    <p>Hello World!</p>
+    <p class="item">UNDER CONSTRUCTION</p>
    </div>
 	<!-- <script src="index.js"></script> -->
   </body>
