--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Civico 4</title>
     <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="preload" href="fonts/chokoshtroko-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/spacecraft-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -37,7 +39,7 @@
 
         
        </div>
-       <button class="top-button" onclick="scrollToTop()">⬆️</button>
+       <button id="scrollButton" class="top-button2" onclick="scrollToTop()"></button>
     </main>
     
 	 <script src="script.js"></script>
