--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div>
           <p class="Tpad1">Per la lista degli allergeni <br>chiedere al personale!</p>
         </div>
-        <p class="Tpad4 Bpad4">We ♥ Aron</p>
+        <div class="Tpad4 Bpad4 easter" onclick="changeText(this)">We ♥ Aron</div>
         <p>Civico 4<br>Aperto dalle 10:30 alle 24</p>
         <p>Sabato dalle 17 alle 24</p>
         <p>Domenica chiuso</p>
@@ -45,112 +45,3 @@
 	 <script src="script.js"></script>
   </body>
 </html>
-
-
-<!--
-    "bowls": [
-       { "notBeer": [
-               { "quantity": 0.5,
-                  "elements": [
-                        {
-                            "name": "SOLO PROSECCO CASA",
-                              "price": "8",
-                            "details": ""
-                            }
-                   ] },
-                     { "quantity": 1,
-                   "elements": [
-            {
-                "name": "PROSECCO CASA",
-                "price": "15",
-                "details": ""
-                },
-                {
-                    "name": "APEROL",
-                    "price": "15",
-                    "details": ""
-                    },
-                    {
-                        "name": "CAMPARI, CYNAR",
-                        "price": "15",
-                        "details": ""
-                        }
-        ] },
-        { "quantity": 1.5,
-        "elements": [
-            {
-                "name": "PROSECCO CASA",
-                "price": "20",
-                "details": ""
-                },
-                {
-                    "name": "APEROL",
-                    "price": "20",
-                    "details": ""
-                    },
-                    {
-                        "name": "CAMPARI, CYNAR",
-                        "price": "20",
-                        "details": ""
-                        } 
-        ] },
-        { "quantity": 2,
-        "elements": [
-                {
-                    "name": "APEROL",
-                    "price": "25",
-                    "details": ""
-                    },
-                    {
-                        "name": "CAMPARI, CYNAR",
-                        "price": "25",
-                        "details": ""
-                        } 
-        ] }
-
-   ] },
-       { "beer": [
-            { "quantity": 1,
-            "elements": [
-                {
-                    "name": "BIONDA",
-                    "price": "13",
-                    "details": ""
-                    },
-                    {
-                     "name": "IPA",
-                    "price": "15",
-                     "details": ""
-                     }  
-            ] },
-            { "quantity": 1.5,
-            "elements": [
-                {
-                    "name": "BIONDA",
-                    "price": "15",
-                    "details": ""
-                    },
-                    {
-                     "name": "IPA",
-                    "price": "17",
-                     "details": ""
-                     } 
-            ] },
-            { "quantity": 2,
-            "elements": [
-                {
-                    "name": "BIONDA",
-                    "price": "18",
-                    "details": ""
-                    },
-                    {
-                     "name": "IPA",
-                    "price": "20",
-                     "details": ""
-                     }  
-            ] }
-
-
-       ] } ]
-
--->
