--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </div>
         <div class="Tpad4 Bpad4 easter" onclick="changeText(this)">We ♥ Aron</div>
         <p>Civico 4<br>Aperto dalle 10:30 alle 24</p>
+        <p>Mercoledì e venerdì fino a 1:00</p>
         <p>Sabato dalle 17 alle 24</p>
         <p>Domenica chiuso</p>
         <p class="Tpad2 Bpad1">Via del Portello, 4, 35131 Padova PD</p>
